2011-06-14  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/49390
	Revert:
	2010-06-29  Bernd Schmidt  <bernds@codesourcery.com>

	* cse.c (exp_equiv_p): For MEMs, if for_gcse, only compare
	MEM_ALIAS_SET.

2011-06-11  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/sse.md (vec_dupv4sf): Correct mode of forced register.
	(*vec_dupv2df): Rename from vec_dupv2df.
	(vec_dupv2df): New expander.

2011-06-09  Eric Botcazou  <ebotcazou@adacore.com>

	* config/sparc/sparc.md (return_internal): Adjust 'length' attribute.

2011-06-08  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2011-06-08  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/driver-i386.c (host_detect_local_cpu): Support
	unknown Intel family 0x6 CPUs.

2011-06-08  Kaz Kojima  <kkojima@gcc.gnu.org>

	Backport from mainline
	2011-06-01  Kaz Kojima  <kkojima@gcc.gnu.org>

	PR target/49238
	* config/sh/sh.c (expand_cbranchdi4): Use a scratch register if
	needed when original operands are used for msw_skip comparison.

2011-06-07  Jakub Jelinek  <jakub@redhat.com>

	PR gcov-profile/49299
	* value-prof.c (gimple_ic): Don't assume icall has a fallthru edge.

2011-06-06  Pat Haugen <pthaugen@us.ibm.com>

	Backport from mainline
	2011-05-31  Pat Haugen <pthaugen@us.ibm.com>

	* config/rs6000/rs6000.h (REG_CLASS_CONTENTS): Remove vr0..vr2 from
	NON_FLOAT_REGS.

2011-06-06  Jakub Jelinek  <jakub@redhat.com>

	PR c++/49264
	* gimple-fold.c (fold_stmt_1): Don't try to fold *& on the lhs
	if stmt folded into nothing.
	* tree-inline.c (fold_marked_statements): If a builtin at the
	end of a bb folded into nothing, just update cgraph edges
	and move to next bb.
	* cgraph.c (cgraph_update_edges_for_call_stmt_node): Allow new_stmt
	to be NULL.  Don't compute count and frequency if new_call is NULL.

2011-06-06  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* longlong.h (smul_ppmm): The resulting register pair contains the
	higher order word first.

2011-06-06  Mikael Pettersson  <mikpe@it.uu.se>
